--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.9",
     "framer-motion": "^12.3.1",
+    "geist": "^1.3.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
