--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^12.3.1",
     "geist": "^1.3.1",
+    "lucide-react": "^0.475.0",
     "ogl": "^1.0.11",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
