--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.14",
     "typescript": "^5.7.3",
+    "utils": "^0.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
